# photothing-api

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Procfile  README.md  Rocket.toml  TODO.org
migrations/2018-07-12-214126_create_users/: up.sql
migrations/2018-07-19-021353_user_last_modified/: down.sql  up.sql
migrations/2018-07-19-022206_photos/: up.sql
migrations/2018-07-19-030201_photo_attrs/: down.sql  up.sql
migrations/2018-08-01-015536_user_joined/: down.sql  up.sql
migrations/2018-08-01-021934_forgot_password/: up.sql
migrations/2018-08-04-161047_add_timezone/: down.sql  up.sql
migrations/2018-08-14-233649_albums/: down.sql  up.sql
migrations/2018-08-29-011018_fix_albums/: down.sql  up.sql
migrations/2018-09-26-000948_publish_albums/: down.sql  up.sql
src/: admin.rs  albums.rs  auth.rs  config.rs  email.rs  errors.rs  hsts.rs  https.rs  lib.rs  main.rs  photos.rs  s3.rs  util.rs  web.rs
src/auth/: guards.rs  mod.rs
src/db/: album.rs  mod.rs  models.rs  pagination.rs  photo.rs  publishing.rs  schema.rs  user.rs
templates/: admin.html.hbs
tests/: photo_albums.rs  user_registration_login.rs
tests/utils/: mod.rs
utils/: db-setup.sql  pre_release.sh
