[package]
name = "photothing_api"
version = "0.1.0"
authors = ["Nathan Merritt <gnm@the-merritts.net>"]

[dependencies]
bcrypt = "0.2"
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "1.3.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.13.0"
futures = "0.1.17"
log = "0.4.3"
mailchecker = "3.2.6"
r2d2 = "0.8.2"
rocket = "0.3.14"
rocket_codegen = "0.3.14"
rocket_contrib = "0.3.14"
rocket_cors = "0.2.3"
rusoto_core = { git = "https://github.com/rusoto/rusoto", rev = "e0790ca" }
rusoto_s3 = { git = "https://github.com/rusoto/rusoto", rev = "e0790ca" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }

[dev-dependencies]
rand = "0.5.3"
reqwest = "0.8.6"
