[package]
name = "photothing_api"
version = "0.1.0"
authors = ["Nathan Merritt <gnm@the-merritts.net>"]

[dependencies]
bcrypt = "0.2"
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "1.3.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.13.0"
futures = "0.1.17"
harsh = "0.1.5"
itertools = "0.7.8"
log = "0.4.3"
mailchecker = "3.2.6"
mailgun_v3 = "0.5.0"
r2d2 = "0.8.2"
reqwest = "0.9.5"
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["handlebars_templates", "diesel_postgres_pool"] }
rocket_cors = "0.4.0-rc.1"
rusoto_core = "0.35.0"
rusoto_s3 = "0.35.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7.1"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
zxcvbn = { version = "1.0.0", features = ["unstable"] }

[dev-dependencies]
rand = "0.5.3"
reqwest = "0.9.5"
